--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ exclude  = [
     "esp-println",
     "esp-riscv-rt",
     "esp-wifi",
+    "esp-storage",
     "examples",
     "extras/bench-server",
     "extras/esp-wifishark",
