--- a/esp-hal-embassy/Cargo.toml
+++ b/esp-hal-embassy/Cargo.toml
@@ -7,9 +7,14 @@ description  = "Embassy support for esp-hal"
 repository   = "https://github.com/esp-rs/esp-hal"
 license      = "MIT OR Apache-2.0"
 
+[package.metadata.docs.rs]
+default-target = "riscv32imac-unknown-none-elf"
+features       = ["esp32c6", "time-timg0"]
+
 [dependencies]
 critical-section    = "1.1.2"
 defmt               = { version = "0.3.8", optional = true }
+document-features   = "0.2.8"
 embassy-executor    = "0.5.0"
 embassy-time-driver = "0.1.0"
 esp-hal             = { version = "0.17.0", path = "../esp-hal" }
@@ -29,10 +34,15 @@ esp32h2 = ["esp-hal/esp32h2"]
 esp32s2 = ["esp-hal/esp32s2"]
 esp32s3 = ["esp-hal/esp32s3"]
 
+## Implement `defmt::Format` on certain types.
+defmt = ["dep:defmt", "embassy-executor/defmt", "esp-hal/defmt"]
+## Use the executor-integrated `embassy-time` timer queue.
 integrated-timers = ["embassy-executor/integrated-timers"]
 
+#! ### Time Driver Feature Flags
+## SYSTIMER (16MHz)
 time-systimer-16mhz = ["embassy-time-driver/tick-hz-16_000_000"]
+## SYSTIMER (80MHz)
 time-systimer-80mhz = ["embassy-time-driver/tick-hz-80_000_000"]
-time-timg0          = ["embassy-time-driver/tick-hz-1_000_000"]
-
-defmt = ["dep:defmt", "embassy-executor/defmt", "esp-hal/defmt"]
+## TIMG0 (1MHz)
+time-timg0 = ["embassy-time-driver/tick-hz-1_000_000"]
