Remove version from path dependencies in `examples` and `hil-test` packages

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -28,14 +28,14 @@ embedded-hal-bus    = "0.1.0"
 embedded-io         = { version = "0.6.1", default-features = false }
 embedded-io-async   = "0.6.1"
 embedded-storage    = "0.3.0"
-esp-alloc           = { version = "0.3.0",  path = "../esp-alloc" }
-esp-backtrace       = { version = "0.11.1", path = "../esp-backtrace", features = ["exception-handler", "panic-handler", "println"] }
-esp-hal             = { version = "0.17.0", path = "../esp-hal", features = ["log"] }
-esp-hal-smartled    = { version = "0.10.0", path = "../esp-hal-smartled", optional = true }
-esp-ieee802154      = { version = "0.1.0",  path = "../esp-ieee802154", optional = true }
-esp-println         = { version = "0.9.1",  path = "../esp-println", features = ["log"] }
-esp-storage         = { version = "0.3.0",  path = "../esp-storage", optional = true }
-esp-wifi            = { version = "0.5.1",  path = "../esp-wifi", optional = true }
+esp-alloc           = { path = "../esp-alloc" }
+esp-backtrace       = { path = "../esp-backtrace", features = ["exception-handler", "panic-handler", "println"] }
+esp-hal             = { path = "../esp-hal", features = ["log"] }
+esp-hal-smartled    = { path = "../esp-hal-smartled", optional = true }
+esp-ieee802154      = { path = "../esp-ieee802154", optional = true }
+esp-println         = { path = "../esp-println", features = ["log"] }
+esp-storage         = { path = "../esp-storage", optional = true }
+esp-wifi            = { path = "../esp-wifi", optional = true }
 fugit               = "0.3.7"
 heapless            = "0.8.0"
 hex-literal         = "0.4.1"
