--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -80,9 +80,9 @@ embedded-hal       = "1.0.0"
 embedded-hal-02    = { version = "0.2.7", package = "embedded-hal", features = ["unproven"] }
 embedded-hal-async = { version = "1.0.0", optional = true }
 embedded-hal-nb    = { version = "1.0.0", optional = true }
-esp-backtrace      = { version = "0.11.1", path = "../esp-backtrace", default-features = false, features = ["exception-handler", "panic-handler", "defmt", "semihosting"] }
+esp-backtrace      = { path = "../esp-backtrace", default-features = false, features = ["exception-handler", "panic-handler", "defmt", "semihosting"] }
 esp-hal            = { path = "../esp-hal", features = ["defmt", "embedded-hal", "embedded-hal-02"], optional = true }
-portable-atomic = "1.6.0"
+portable-atomic    = "1.6.0"
 
 [dev-dependencies]
 crypto-bigint       = { version = "0.5.5", default-features = false }
