--- a/esp-backtrace/Cargo.toml
+++ b/esp-backtrace/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name        = "esp-backtrace"
-version     = "0.11.1"
-edition     = "2021"
-description = "Bare-metal backtrace support for ESP32"
-repository  = "https://github.com/esp-rs/esp-hal"
-license     = "MIT OR Apache-2.0"
+name         = "esp-backtrace"
+version      = "0.11.1"
+edition      = "2021"
+rust-version = "1.76.0"
+description  = "Bare-metal backtrace support for ESP32"
+repository   = "https://github.com/esp-rs/esp-hal"
+license      = "MIT OR Apache-2.0"
 
 [package.metadata.docs.rs]
 default-target = "riscv32imc-unknown-none-elf"
